--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 menu:
   Home: /
   Archives: /archives
-  RSS: /atom.xml
+  Rss: /atom.xml
 ## you can create `tags` and `categories` folders in `../source`.
 ## And create a `index.md` file in each of them.
 ## set `front-matter`as
@@ -60,9 +60,9 @@ author:
   google_plus:    ## eg:116338260303228776998 for https://plus.google.com/u/0/116338260303228776998
   intro_line1: "" ## eg: "Hello ,I'm Larry Page in Google."
   intro_line2: "" ## eg: "This is my blog,believe it or not."
-  weibo:      ## e.g. 436062867 for http://weibo.com/436062867
-  twitter:    ## e.g. yangjiansky for https://twitter.com/yangjiansky
-  github:     ## e.g. A-limon for https://github.com/A-limon
+  weibo: leezhm     ## e.g. 436062867 for http://weibo.com/436062867
+  twitter: zhengminli   ## e.g. yangjiansky for https://twitter.com/yangjiansky
+  github: leezhm    ## e.g. A-limon for https://github.com/A-limon
   facebook:   ## e.g. yangjian for https://favebook.com/yangjian
   tsina:      ## e.g. 1664838973  Your weibo ID,It will be used in share button.
 
