--- a/_config.yml
+++ b/_config.yml
@@ -58,8 +58,8 @@ fancybox: false
 #### Author information
 author:
   google_plus:    ## eg:116338260303228776998 for https://plus.google.com/u/0/116338260303228776998
-  intro_line1: "" ## eg: "Hello ,I'm Larry Page in Google."
-  intro_line2: "" ## eg: "This is my blog,believe it or not."
+  intro_line1: "Hi, I'm leezhm, a kubility programmer who lived in Shanghai !" ## eg: "Hello ,I'm Larry Page in Google."
+  intro_line2: "What is good for us is not neccessnary what we want ...so what should I need to do? Sharing ..." ## eg: "This is my blog,believe it or not."
   weibo: leezhm     ## e.g. 436062867 for http://weibo.com/436062867
   twitter: zhengminli   ## e.g. yangjiansky for https://twitter.com/yangjiansky
   github: leezhm    ## e.g. A-limon for https://github.com/A-limon
