--- a/_config.yml
+++ b/_config.yml
@@ -68,8 +68,8 @@ author:
 
 #### Comment
 duoshuo: 
-  enable: false  ## duoshuo.com
-  short_name:    ## duoshuo short name.
+  enable: true  ## duoshuo.com
+  short_name: code4fun   ## duoshuo short name.
 
 #### Share button
 jiathis:
