修改顶部菜单为中文，替换_config.yml中的pacman为funman

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 ##### Menu
 menu:
-  Home: /
-  Archives: /archives
-  Rss: /atom.xml
+  首页: /
+  归档: /archives
+  订阅: /atom.xml
+  关于: /about
 ## you can create `tags` and `categories` folders in `../source`.
 ## And create a `index.md` file in each of them.
 ## set `front-matter`as
@@ -13,7 +14,9 @@ menu:
 #### Widgets
 widgets: 
 - category
+- archive
 - tag
+- links
 ###- rss
 ## provide six widgets:category,tag,rss,archive,tagcloud,links.
 ## modify links in `/layout/_widget/links.ejs`.
@@ -24,9 +27,9 @@ rss: ## RSS address.
 #### Image
 imglogo:
   enable: true             ## display image logo true/false.
-  src: img/logo.svg        ## `.svg` and `.png` are recommended,please put image into the theme folder `/pacman/source/img`.
-favicon: img/favicon.ico   ## size:32px*32px,`.ico` is recommended,please put image into the theme folder `/pacman/source/img`.     
-apple_icon: img/pacman.jpg ## size:114px*114px,please put image into the theme folder `/pacman/source/img`.
+  src: img/logo.svg        ## `.svg` and `.png` are recommended,please put image into the theme folder `/funmain/source/img`.
+favicon: img/favicon.ico   ## size:32px*32px,`.ico` is recommended,please put image into the theme folder `/funmain/source/img`.     
+apple_icon: img/funmain.jpg ## size:114px*114px,please put image into the theme folder `/funmain/source/img`.
 
 #### Author Avatar Picture
 author_img_enable: true ## display author avatar picture
@@ -40,7 +43,7 @@ author_img: img/author.jpg ## size:220px*220px.
 
 #### Font
 ShowCustomFont: true  
-## you can change custom font in `variable.styl` and `font.styl` which in the theme folder `/pacman/source/css`.
+## you can change custom font in `variable.styl` and `font.styl` which in the theme folder `/funmain/source/css`.
 
 #### Toc
 toc:
@@ -53,7 +56,7 @@ toc:
 fancybox: false 
 ## if you use gallery post or want use fancybox please set the value to true.
 ## if you want use fancybox in ANY post please copy the file `fancybox.js`.
-## in theme folder `/pacman/scripts` to your hexo blog folder `../scritps`.
+## in theme folder `/funmain/scripts` to your hexo blog folder `../scritps`.
 
 #### Author information
 author:
