--- a/_config.yml
+++ b/_config.yml
@@ -76,8 +76,8 @@ duoshuo:
 
 #### Share button
 jiathis:
-  enable: false ## if you use jiathis as your share tool,the built-in share tool won't be display.
-  id:    ## e.g. 1501277 your jiathis ID. 
+  enable: true ## if you use jiathis as your share tool,the built-in share tool won't be display.
+  id: 1526871   ## e.g. 1501277 your jiathis ID. 
   tsina: ## e.g. 1664838973 Your weibo id,It will be used in share button.
 
 #### Baidu Analytics
